# fleek-sgx

./: +  .gitattributes  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
data/: full_collateral.json  qe_identity.json  tcb_info.json
enclave/: Cargo.toml
enclave/src/: args.rs  blockstore.rs  codec.rs  connection.rs  enclave.rs  error.rs  http.rs  main.rs  req_res.rs  runtime.rs  seal_key.rs
enclave/src/b3_verify/: iter.rs  mod.rs  test_utils.rs  utils.rs  verifier.rs  walker.rs
enclave/src/b3_verify/hasher/: b3.rs  collector.rs  iv.rs  mod.rs
enclave/src/b3_verify/hasher/byte_hasher/: mod.rs
enclave/src/b3_verify/hasher/dir_hasher/: mod.rs  reference.rs  transcript.rs
enclave/src/exchange/: client.rs  codec.rs  collateral_prov.rs  mod.rs  server.rs
enclave/src/runtime/: host.rs  mod.rs
lib/dcap-quoteprov/: Cargo.toml
lib/ra-tls/: Cargo.toml  README.md
lib/ra-tls/src/: cert.rs  client.rs  codec.rs  collateral_prov.rs  lib.rs  server.rs  verifier.rs
lib/ra-verify/: Cargo.toml
lib/ra-verify/src/: api.rs  lib.rs
lib/ra-verify/src/types/: mod.rs  sgx_x509.rs  tcb_info.rs
lib/remote-attestation/: Cargo.toml
lib/remote-attestation/src/: lib.rs  pki.rs
service/: Cargo.toml  README.md  build.rs
service/enclave/: Cargo.toml
service/enclave/src/: attest.rs  enclave.rs  error.rs  http.rs  main.rs
service/src/: bin.rs
src/: lib.rs  pki.rs  quote.rs  sgx_x509.rs  test_tls.rs  types.rs  utils.rs
src/types/: collateral.rs  mod.rs  qe_identity.rs  quote.rs  report.rs  sgx_x509.rs  tcb_info.rs
