[package]
name = "fleek-remote-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"]}
hex = { version = "0.4.3", features = ["serde"]}
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }

# TLS & crypto deps
rustls = {version = "0.23.12", default-features = false, features= ["tls12", "logging", "std"]}
mbedtls = {version = "0.12.3", features = ["pkcs12", "x509"]}
mbedtls-sys-auto = "2.28.7"
rustls-mbedcrypto-provider = { version = "0.1.0", features = [
  "logging",
  "tls12",
] }
rustls-mbedpki-provider = "0.1.0"
rustls-pemfile = "2.1.3"
rustls-pki-types = "1.8.0"
x509-parser = {version= "0.16.0", features = ["verify"]}

[dev-dependencies]
rand = "0.4.0"

