[package]
name = "fleek-remote-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"]}
hex = { version = "0.4.3", features = ["serde"]}
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
asn1 = "0.16.1"
zerocopy = { version = "0.7.34", features = ["derive"] }
bitflags = "2.3.3"

# rustls = {version = "0.23.12", default-features = false, features= ["tls12", "logging", "std"]}

# Rustcrypto ecosystem
p256 = "0.13.2"
x509-cert = "0.2.5"
pem = "3.0.4"
x509-verify = {version = "0.4.6", features = ["x509"]}

[dev-dependencies]

