[package]
name = "fleek-service-sgx-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
# WASM Runtime
wasmi = "=0.38.0"

# Error stuffs
anyhow = "=1.0.89"
thiserror = "=1.0.64"

# IO
arrayref = "=0.3.9"
bytes = "=1.7.2"

# Encodings
hex = "=0.4.3"
bs58 = "=0.5.1"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
blake3-tree = "=0.1.0"

# SGX Utilities
sgx-isa = {version = "0.4.0", features = ["serde"] }
ra-verify = { path = "../lib/ra-verify" }
ra-tls = { path = "../lib/ra-tls" }

# Crypto
sha2 = "=0.10"
rdrand = "=0.8.3"
libsecp256k1  = "=0.7.1"

[dependencies.ecies]
# Notes about cryptography dependencies:
#   - `aes-gcm`: pure rust, has been audited
#   - `libsecp256k1`: pure rust, from paritytech
#   - `rand_core::OsRng` -> `getrandom`: uses RDRAND on SGX
version = "=0.2.7"
default-features = false
features = ["pure", "std"]

[dependencies.bip32]
version = "0.5.2"
default-features = false
features = ["std", "k256"]
