[package]
name = "dcap-quoteprov"
edition.workspace = true
version = "0.1.0"

[dependencies]
# Encoding/decoding
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"]}
base16 = "0.2.1"
der-parser = "8.1.0"
pem = "2.0.1"
x509-parser = "0.15.0"

# Network
ureq = "2.6.1"

# SGX
dcap-ql = "0.3.4"
sgx_pkix = "0.2.1"
