[package]
name = "ra-tls"
version.workspace = true
edition.workspace = true

[dependencies]
fleek-remote-attestation = { path = "../remote-attestation" }
anyhow = "1"
serde = "1.0.147"
serde_json = "1.0.125"
rsa = { version = "0.9", features= ["sha2"] }
x509-cert = { version = "0.2", features = ["builder", "pem", "hazmat"] }
rustls-rustcrypto = "0.0.2-alpha"
p256 = "0.13"
p384 = "0.13"
der = "0.7"
rdrand = "0.8.3"
rustls = { version = "0.23", features = ["std"], default-features = false }
