[package]
name = "ra-tls"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"

# Encoding and decoding
serde = "1.0.147"
serde_json = "1.0.125"
der = "0.7"
x509-cert = { version = "0.2", features = ["builder", "pem", "hazmat"] }

# Crypto
rsa = { version = "0.9", features= ["sha2"] }
p256 = "0.13"
p384 = "0.13"
rdrand = "0.8.3"
rustls = { version = "0.23", features = ["std"], default-features = false }
rustls-rustcrypto = "0.0.2-alpha"

# In house libraries
ra-verify = { path = "../ra-verify" }

